[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysome_profiling"
version = "0.0.1"
authors = [
  { name="Oscar Despard", email="odespard@mrc-lmb.cam.ac.uk" },
]
description = "A package for plotting polysome profiling data"
readme = "README.md"
requires-python = "=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"