[project]
name = "polysome"
version = "0.0.1"
authors = [
  { name="Oscar Despard", email="odespard@mrc-lmb.cam.ac.uk" },
]
description = "A package for plotting polysome profiling data"
readme = "README.md"
requires-python = ">=3.10"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
